WIP: Få vekk enda mer Lombok-ræl